[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["IceSentry <c.giguere42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
permute = "0.1.0"
rayon = "1.2.1"
ansi_term = "0.12.1"
itertools = "0.8.2"
ordered-float = "1.0.2"
regex = "1.3.1"
num = "0.2.0"
